client/www/index.css
body {
  margin: 0px;
  font-family: "Helvetica Neue", Helvetica, sans-serif;  
  background-color: #ddd;
  font-size: 20px;
}

#header {
  margin-top: 20px;
  margin-bottom: 40px;
  margin-left: 0px;
  margin-right: 0px;
  background-color: #333;
  padding: 5px;
  color: #eee;
  font-size: 25px;
}

#content {
	display: grid;	
  grid-template-columns: auto 80% auto;  
}

#main {
  grid-column: 2;  
}

#myPlateNumberForm {
  grid-column: 2;
  text-align: center;
}

#save {
  font-size: 20px;
}

.plateNumber {
  font-size: 20px;
  padding: 5px;
  width: 100%;
  text-transform: uppercase;  
  text-align: center;
}
::-webkit-input-placeholder { /* WebKit browsers */
  text-transform: none;
}

#feedback_buttons {
  font-size: 25px;
  margin-top: 10px;
  text-align: center;
}

#dislike {
  position: relative;
  top: 25px;
}

.thumb-up {
  color: #4CAF50;
}

.thumb-down {
  margin-left: 10px;
  color: #F44336;
}

#status {
  position: absolute;
  bottom:0;
  margin-left: 10px;
}

